--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,25 @@
-body {
-    background-color: #212224;
-}
-
-h1 {
-    color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-}
+html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  body {
+    background-color: #050505;
+  }
+  
+  .content {
+    height: 100%;
+    font-family: 'Cutive Mono', monospace;
+  }
+  
+  .search {
+    margin: 0 0 1em;
+  }
+  
+  .submit {
+    width: 70px;
+    background-color: #1c87c9;
+    color: #ffffff;
+  }
