--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,53 @@
-html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  body {
-    background-color: #050505;
-  }
-  
-  .content {
-    height: 100%;
-    font-family: 'Cutive Mono', monospace;
-  }
-  
-  .search {
-    margin: 0 0 1em;
-  }
-  
-  .submit {
-    width: 70px;
-    background-color: #1c87c9;
-    color: #ffffff;
-  }
+:root {
+  --background-color: #111;
+  --background-color-alt: #222;
+  --primary-font-color: #DDD;
+  --input-background-color: #222;
+  --input-font-color: #EEE;
+}
+
+body {
+  background: var(--background-color);
+  color: var(--primary-font-color);
+  padding: 0.5em;
+}
+
+input,
+select {
+  background: var(--input-background-color);
+  color: var(--input-font-color);
+}
+
+input[type="text"]:disabled {
+  background: inherit;
+  border: none;
+}
+
+h1 {
+  text-align: center;
+}
+
+hr {
+  border-color: var(--background-color-alt);
+}
+
+.entry {
+  margin-bottom: 0.25em;
+  padding: 0.25em;
+}
+
+.entry:nth-child(even) {
+  background: var(--background-color-alt);
+}
+
+.entry label {
+  display: inline-block;
+  width: 8em;
+  font-weight: bold;
+}
+
+.results {
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 1em;
+}
